--- a/PRACTICO III/Responsive.html
+++ b/PRACTICO III/Responsive.html
@@ -11,8 +11,26 @@
 </head>
 <body>
     <header>
+        <figure>
+            <img src="./assets/img/logo.svg" alt="">
+        </figure>
+        <div class="header-title-container">
+            <h1>La próxima revolución en el intercambio de criptomonedas.</h1>
+            <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
+            <a href="" class="header-button">Conoce Nuestros Planes<span></span></a>
+        </div>
         <main>
-            <section></section>
+            <section class="main-exchange-container">
+                <div class="backgroundimg"></div>
+                <div class="main-exchange-conteiner-tittle">
+                    <h2>Visibilizamos todas las tasas de cambio.</h2>
+                    <p>Traemos información en tiempo real de las casas de cambio y las 
+                        monedas más importantes del mundo.</p>
+                </div>
+                <section class="main-tables-conteiner">
+                    <div></div>
+                </section>
+            </section>
             <section></section>
             <section></section>
             <section></section>
