--- a/PRACTICO III/Responsive.html
+++ b/PRACTICO III/Responsive.html
@@ -28,7 +28,32 @@
                         monedas más importantes del mundo.</p>
                 </div>
                 <section class="main-tables-conteiner">
-                    <div></div>
+                    <div class="main-currency-table">
+                        <p class="currency-table-title">Monedas</p>
+                        <div class="currency-table-container">
+                            <table>
+                                <tr>
+                                    <td class="table-top-left">Bitcoin</td>
+                                    <td class="table-top-right table-right">$1.96 <span class="down"></span></td>
+                                </tr>
+                                <tr>
+                                    <td>Ethereum</td>
+                                    <td class="table-top-right table-right">$0.07 <span class="up"></span></td>
+                                </tr>
+                                <tr>
+                                    <td>Ripple</td>
+                                    <td class="table-top-right table-right">$2.15 <span class="down"></span></td>
+                                </tr>
+                                <tr>
+                                    <td class="table-bottom-left">Stellar</td>
+                                    <td class="table.top.right table-right">$4.96 <span class="down"></span></td>
+                                </tr>
+                            </table>
+                        </div>
+                        <div class="currency-table-date">
+                            <p><b>Actualizado: 19 Julio 23:45</b></p>
+                        </div>
+                    </div>
                 </section>
             </section>
             <section></section>
