--- a/PRACTICO III/Responsive.html
+++ b/PRACTICO III/Responsive.html
@@ -46,19 +46,73 @@
                                 </tr>
                                 <tr>
                                     <td class="table-bottom-left">Stellar</td>
-                                    <td class="table.top.right table-right">$4.96 <span class="down"></span></td>
+                                    <td class="table-top-right table-right">$4.96 <span class="down"></span></td>
                                 </tr>
                             </table>
                         </div>
                         <div class="currency-table-date">
                             <p><b>Actualizado: 19 Julio 23:45</b></p>
                         </div>
+                        <div class="table-two">
+                            <p class="table-two-tittle">Comisiones</p>
+                            <table>
+                              <tr>
+                                 <td class="table-two-left">Bitrade<span></span></td>
+                                 <td class="table-two-top two-right">$ 12.96 </td>
+                              </tr>
+                              <tr>
+                                  <td>Bitpreco<span></span></td>
+                                  <td class="table-two-top two-right">$13.07 </td>
+                              </tr>
+                              <tr>
+                                  <td>Novadax<span></span></td>
+                                  <td class="table-two-top two-right">$13.15 </td>
+                              </tr>
+                              <tr>
+                                  <td class="table-two-left">Coinext<span></span></td>
+                                  <td class="table-two-top two-right">$ 14.96 </td>
+                              </tr>
+                            </table>
+                        </div>
+                        <div class="table-two-date">
+                            <p><b>Actualizado: 19 Julio 23:48</b></p>
+                        </div>
                     </div>
                 </section>
             </section>
-            <section></section>
-            <section></section>
-            <section></section>
+            <section class="main-product-detail">
+                <span></span>
+                <div class="product-detail-tittle">
+                    <h2>Creamos un producto sin comparación.</h2>
+                    <p>Confiable y diseñado para su uso diario.</p>
+                </div>
+            <section class="product-cards-container">
+                <article class="time-detail-card">
+                    <span class="clock"></span>
+                    <p class="clock-card-titlle">Tiempo real</p>
+                    <p class="clock-card-body">Nuestro API toma información minuto a minuto 
+                        sobre las tasas que más determinan el comportamiento.</p>
+                </article>
+                <article class="time-detail-card">
+                    <span class="eye"></span>
+                    <p class="eye-card-tittle">No hay tasas escondidas</p>
+                    <p class="eye-card-body">Ni en la compra o al momento de exit, Batabit siempre 
+                        te muestra el costo real de lo que estás adquiriendo.</p>
+                </article>
+                <article class="money-detail-card">
+                    <span class="money"></span>
+                    <p class="money-card-tittle">Compara monedas</p>
+                    <p class="money-card-body">Ni en la compra o al momento de exit, Batabit siempre 
+                        te muestra el costo real de lo que estás adquiriendo.</p>
+                </article>
+                <article class="check-detail-card">
+                    <span class="check"></span>
+                    <p class="check-card-tittle">Información confiable</p>
+                    <p class="check-card-bosy">Nuestras fuentes están 100% verificadas y continuamos 
+                        auditando su contenido mientras se actualizan.</p>
+                </article>
+            </section>
+            
         </main>
     </header>
 </body>
