--- a/PREPROCESADORES/landing.html
+++ b/PREPROCESADORES/landing.html
@@ -17,10 +17,10 @@
       <p>¿Queres arreglar ese sillon desgastado? Nosotros te podemos ayudar, traelo charlamos un rato acerca de como te gustaria que quede.</p><span>Cualquier cosa los datos estan en la seccion de informacion</span>
     </section>
     <ul> 
-      <li>Título Principal</li>
-      <li>Subtitulo 1</li>
-      <li>Subtitulo 2</li>
-      <li>Subtitulo 3</li>
+      <li>Título Principal,Subtitulo 1,Subtitulo 2,Subtitulo 3</li>
+      <li>Título Principal,Subtitulo 1,Subtitulo 2,Subtitulo 3</li>
+      <li>Título Principal,Subtitulo 1,Subtitulo 2,Subtitulo 3</li>
+      <li>Título Principal,Subtitulo 1,Subtitulo 2,Subtitulo 3</li>
     </ul>
   </body>
 </html>
