--- a/PRACTICO III/Responsive.html
+++ b/PRACTICO III/Responsive.html
@@ -19,101 +19,108 @@
             <p>Batatabit te ayuda a navegar entre los diferentes precios y tendencias.</p>
             <a href="" class="header-button">Conoce Nuestros Planes<span></span></a>
         </div>
-        <main>
-            <section class="main-exchange-container">
-                <div class="backgroundimg"></div>
-                <div class="main-exchange-conteiner-tittle">
-                    <h2>Visibilizamos todas las tasas de cambio.</h2>
-                    <p>Traemos información en tiempo real de las casas de cambio y las 
-                        monedas más importantes del mundo.</p>
-                </div>
-                <section class="main-tables-conteiner">
-                    <div class="main-currency-table">
-                        <p class="currency-table-title">Monedas</p>
-                        <div class="currency-table-container">
-                            <table>
-                                <tr>
-                                    <td class="table-top-left">Bitcoin</td>
-                                    <td class="table-top-right table-right">$1.96 <span class="down"></span></td>
-                                </tr>
-                                <tr>
-                                    <td>Ethereum</td>
-                                    <td class="table-top-right table-right">$0.07 <span class="up"></span></td>
-                                </tr>
-                                <tr>
-                                    <td>Ripple</td>
-                                    <td class="table-top-right table-right">$2.15 <span class="down"></span></td>
-                                </tr>
-                                <tr>
-                                    <td class="table-bottom-left">Stellar</td>
-                                    <td class="table-top-right table-right">$4.96 <span class="down"></span></td>
-                                </tr>
-                            </table>
-                        </div>
-                        <div class="currency-table-date">
-                            <p><b>Actualizado: 19 Julio 23:45</b></p>
-                        </div>
-                        <div class="table-two">
-                            <p class="table-two-tittle">Comisiones</p>
-                            <table>
-                              <tr>
-                                 <td class="table-two-left">Bitrade<span></span></td>
-                                 <td class="table-two-top two-right">$ 12.96 </td>
-                              </tr>
-                              <tr>
-                                  <td>Bitpreco<span></span></td>
-                                  <td class="table-two-top two-right">$13.07 </td>
-                              </tr>
-                              <tr>
-                                  <td>Novadax<span></span></td>
-                                  <td class="table-two-top two-right">$13.15 </td>
-                              </tr>
-                              <tr>
-                                  <td class="table-two-left">Coinext<span></span></td>
-                                  <td class="table-two-top two-right">$ 14.96 </td>
-                              </tr>
-                            </table>
-                        </div>
-                        <div class="table-two-date">
-                            <p><b>Actualizado: 19 Julio 23:48</b></p>
-                        </div>
-                    </div>
-                </section>
-            </section>
-            <section class="main-product-detail">
-                <span></span>
-                <div class="product-detail-tittle">
+    </header>    
+    <main>
+        <section class="main-exchange-container">
+            <div class="backgroundimg">
+            </div>
+            <div class="main-exchange-conteiner-tittle">
+                <h2>Visibilizamos todas las tasas de cambio.</h2>
+                <p>Traemos información en tiempo real de las casas de cambio y las 
+                    monedas más importantes del mundo.</p>
+            </div>
+        </section>
+        <section class="main-tables-conteiner">
+            <div class="main-currency-table"></div>
+                <p class="currency-table-title">Monedas</p>
+            <div class="currency-table-container">
+                <table>
+                        <tr>
+                    <td class="table-top-left">Bitcoin</td>
+                    <td class="table-top-right table-right">$1.96 <span class="down"></span></td>
+                        </tr>
+                        <tr>
+                    <td>Ethereum</td>
+                    <td class="table-top-right table-right">$0.07 <span class="up"></span></td>
+                        </tr>
+                        <tr>
+                    <td>Ripple</td>
+                    <td class="table-top-right table-right">$2.15 <span class="down"></span></td>
+                        </tr>
+                        <tr>
+                    <td class="table-bottom-left">Stellar</td>
+                    <td class="table-top-right table-right">$4.96 <span class="down"></span></td>
+                        </tr>
+                    </table>
+            </div>
+            <div class="currency-table-date">
+                <p><b>Actualizado: 19 Julio 23:45</b></p>
+            </div>
+            <div class="table-two">
+                <p class="table-two-tittle">Comisiones</p>
+                <table>
+                    <tr>
+                        <td class="table-two-left">Bitrade<span></span></td>
+                        <td class="table-two-top two-right">$ 12.96 </td>
+                    </tr>
+                    <tr>
+                        <td>Bitpreco<span></span></td>
+                        <td class="table-two-top two-right">$13.07 </td>
+                    </tr>
+                    <tr>
+                        <td>Novadax<span></span></td>
+                        <td class="table-two-top two-right">$13.15 </td>
+                    </tr>
+                    <tr>
+                        <td class="table-two-left">Coinext<span></span></td>
+                        <td class="table-two-top two-right">$ 14.96 </td>
+                    </tr>
+                </table>
+            </div>
+            <div class="table-two-date">
+                <p><b>Actualizado: 19 Julio 23:48</b></p>
+            </div>
+        </section>
+        <section class="main-product-detail">
+            <span></span>
+            <div class="product-detail-tittle">
                     <h2>Creamos un producto sin comparación.</h2>
                     <p>Confiable y diseñado para su uso diario.</p>
-                </div>
-            <section class="product-cards-container">
+            </div>
+            <div class="product-cards-container">
                 <article class="time-detail-card">
                     <span class="clock"></span>
                     <p class="clock-card-titlle">Tiempo real</p>
                     <p class="clock-card-body">Nuestro API toma información minuto a minuto 
                         sobre las tasas que más determinan el comportamiento.</p>
                 </article>
+            </div>
+            <div>
                 <article class="time-detail-card">
                     <span class="eye"></span>
                     <p class="eye-card-tittle">No hay tasas escondidas</p>
                     <p class="eye-card-body">Ni en la compra o al momento de exit, Batabit siempre 
                         te muestra el costo real de lo que estás adquiriendo.</p>
                 </article>
+            </div>
+            <div>
                 <article class="money-detail-card">
                     <span class="money"></span>
                     <p class="money-card-tittle">Compara monedas</p>
                     <p class="money-card-body">Ni en la compra o al momento de exit, Batabit siempre 
                         te muestra el costo real de lo que estás adquiriendo.</p>
                 </article>
+            </div>
+            <div>
                 <article class="check-detail-card">
                     <span class="check"></span>
                     <p class="check-card-tittle">Información confiable</p>
                     <p class="check-card-bosy">Nuestras fuentes están 100% verificadas y continuamos 
                         auditando su contenido mientras se actualizan.</p>
                 </article>
-            </section>
+            </div>
+        </section>
             
-        </main>
-    </header>
+    </main>
 </body>
 </html>
