--- a/PRACTICAS VARIADAS/SpinText.htm
+++ b/PRACTICAS VARIADAS/SpinText.htm
@@ -9,13 +9,11 @@
 </head>
 <body>
     <ul>
-       <li>P</li>
-       <li>A</li>
-       <li>P</li>
-       <li>U</li>
-       <li>N</li>
-       <li>D</li>
-       <li>O</li> 
+       <li>PRO</li>
+       <li>GRA</li>
+       <li>MA</li>
+       <li>CI</li>
+       <li>ÓN</li> 
        <div style="clear: both;"></div>
     </ul>
 </body>
